fix fixed bg on mobile add 1920 var

--- a/src/sass/global/_container.scss
+++ b/src/sass/global/_container.scss
@@ -13,7 +13,7 @@
     padding: 0 90px;
   }
 
-  @include mq('desltop') {
+  @include mq('1600') {
     padding: 0 140px;
   }
 }
