--- a/src/sass/global/_header.scss
+++ b/src/sass/global/_header.scss
@@ -1,8 +1,19 @@
 .header {
   min-height: 25vh;
   color: $white;
-  background: $bgblue url('../img/header_mine.jpg') no-repeat center top fixed;
   position: relative;
+
+  &:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: $bgblue url('../img/header_mine.jpg') no-repeat center top;
+  }
 
   .glasses {
     position: fixed;
