--- a/src/sass/global/helpers/_variables.scss
+++ b/src/sass/global/helpers/_variables.scss
@@ -12,6 +12,6 @@ $bgblue: #70b4e3;
 $bggray: #f5f5f5;
 $white: #fff;  
 
-$breakpoints: ("320": 320px, "768": 768px, "1280": 1280px, "1600": 1600px);
+$breakpoints: ("320": 320px, "768": 768px, "1280": 1280px, "1600": 1600px, "1920": 1920px);
 //width container
 $max-width: 1640px;
